# mydeen

./: .gitignore  pyproject.toml
tests/: test_mydeen.py
