[project]
name = "mydeen"
version = "0.1.0"
description = ""
authors = [
    {name = "kikakop Junior",email = "kikakopjunior@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google-api-python-client (>=2.165.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mydeen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mydeen = "mydeen.__init__:main"
